--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -602,3 +602,103 @@
  OTT_Loyalists_ds_ADJ:0 "Turkish"
  OTT_Loyalists_cn_ADJ:0 "Turkish"
  OTT_Loyalists_an_ADJ:0 "Turkish"
+
+ UAR_North_ni:0 "Revolutionary State of North Arabia"
+ UAR_North_ni_DEF:0 "Revolutionary State of North Arabia"
+ UAR_North_ds:0 "Revolutionary State of North Arabia"
+ UAR_North_ds_DEF:0 "Revolutionary State of North Arabia"
+ UAR_North_rc:0 "Revolutionary State of North Arabia"
+ UAR_North_rc_DEF:0 "Revolutionary State of North Arabia"
+ UAR_North_an:0 "Revolutionary State of North Arabia"
+ UAR_North_an_DEF:0 "Revolutionary State of North Arabia"
+ UAR_North_cn:0 "Revolutionary State of North Arabia"
+ UAR_North_cn_DEF:0 "Revolutionary State of North Arabia"
+ UAR_North_lb:0 "Revolutionary State of North Arabia"
+ UAR_North_lb_DEF:0 "Revolutionary State of North Arabia"
+ UAR_North_ss:0 "Revolutionary State of North Arabia"
+ UAR_North_ss_DEF:0 "Revolutionary State of North Arabia"
+ UAR_North_jc:0 "Revolutionary State of North Arabia"
+ UAR_North_jc_DEF:0 "Revolutionary State of North Arabia"
+ UAR_North_ni_ADJ:0 "Republican Arab"
+ UAR_North_rc_ADJ:0 "Republican Arab"
+ UAR_North_lb_ADJ:0 "Republican Arab"
+ UAR_North_ss_ADJ:0 "Republican Arab"
+ UAR_North_jc_ADJ:0 "Republican Arab"
+ UAR_North_ds_ADJ:0 "Republican Arab"
+ UAR_North_cn_ADJ:0 "Republican Arab"
+ UAR_North_an_ADJ:0 "Republican Arab"
+
+ KOR_republic_ni:0 "Republic of Korea"
+ KOR_republic_ni_DEF:0 "Republic of Korea"
+ KOR_republic_ds:0 "Republic of Korea"
+ KOR_republic_ds_DEF:0 "Republic of Korea"
+ KOR_republic_rc:0 "Republic of Korea"
+ KOR_republic_rc_DEF:0 "Republic of Korea"
+ KOR_republic_an:0 "Republic of Korea"
+ KOR_republic_an_DEF:0 "Republic of Korea"
+ KOR_republic_cn:0 "Republic of Korea"
+ KOR_republic_cn_DEF:0 "Republic of Korea"
+ KOR_republic_lb:0 "Republic of Korea"
+ KOR_republic_lb_DEF:0 "Republic of Korea"
+ KOR_republic_ss:0 "Republic of Korea"
+ KOR_republic_ss_DEF:0 "Republic of Korea"
+ KOR_republic_jc:0 "Republic of Korea"
+ KOR_republic_jc_DEF:0 "Republic of Korea"
+ KOR_republic_ni_ADJ:0 "Korean"
+ KOR_republic_rc_ADJ:0 "Korean"
+ KOR_republic_lb_ADJ:0 "Korean"
+ KOR_republic_ss_ADJ:0 "Korean"
+ KOR_republic_jc_ADJ:0 "Korean"
+ KOR_republic_ds_ADJ:0 "Korean"
+ KOR_republic_cn_ADJ:0 "Korean"
+ KOR_republic_an_ADJ:0 "Korean"
+
+ KOR_military_dictatorship_ni:0 "Korean State"
+ KOR_military_dictatorship_ni_DEF:0 "Korean State"
+ KOR_military_dictatorship_ds:0 "Korean State"
+ KOR_military_dictatorship_ds_DEF:0 "Korean State"
+ KOR_military_dictatorship_rc:0 "Korean State"
+ KOR_military_dictatorship_rc_DEF:0 "Korean State"
+ KOR_military_dictatorship_an:0 "Korean State"
+ KOR_military_dictatorship_an_DEF:0 "Korean State"
+ KOR_military_dictatorship_cn:0 "Korean State"
+ KOR_military_dictatorship_cn_DEF:0 "Korean State"
+ KOR_military_dictatorship_lb:0 "Korean State"
+ KOR_military_dictatorship_lb_DEF:0 "Korean State"
+ KOR_military_dictatorship_ss:0 "Korean State"
+ KOR_military_dictatorship_ss_DEF:0 "Korean State"
+ KOR_military_dictatorship_jc:0 "Korean State"
+ KOR_military_dictatorship_jc_DEF:0 "Korean State"
+ KOR_military_dictatorship_ni_ADJ:0 "Korean"
+ KOR_military_dictatorship_rc_ADJ:0 "Korean"
+ KOR_military_dictatorship_lb_ADJ:0 "Korean"
+ KOR_military_dictatorship_ss_ADJ:0 "Korean"
+ KOR_military_dictatorship_jc_ADJ:0 "Korean"
+ KOR_military_dictatorship_ds_ADJ:0 "Korean"
+ KOR_military_dictatorship_cn_ADJ:0 "Korean"
+ KOR_military_dictatorship_an_ADJ:0 "Korean"
+
+ KOR_Zaibatsu_ni:0 "Corporate Territory of Chosen"
+ KOR_Zaibatsu_ni_DEF:0 "Corporate Territory of Chosen"
+ KOR_Zaibatsu_ds:0 "Corporate Territory of Chosen"
+ KOR_Zaibatsu_ds_DEF:0 "Corporate Territory of Chosen"
+ KOR_Zaibatsu_rc:0 "Corporate Territory of Chosen"
+ KOR_Zaibatsu_rc_DEF:0 "Corporate Territory of Chosen"
+ KOR_Zaibatsu_an:0 "Corporate Territory of Chosen"
+ KOR_Zaibatsu_an_DEF:0 "Corporate Territory of Chosen"
+ KOR_Zaibatsu_cn:0 "Corporate Territory of Chosen"
+ KOR_Zaibatsu_cn_DEF:0 "Corporate Territory of Chosen"
+ KOR_Zaibatsu_lb:0 "Corporate Territory of Chosen"
+ KOR_Zaibatsu_lb_DEF:0 "Corporate Territory of Chosen"
+ KOR_Zaibatsu_ss:0 "Corporate Territory of Chosen"
+ KOR_Zaibatsu_ss_DEF:0 "Corporate Territory of Chosen"
+ KOR_Zaibatsu_jc:0 "Corporate Territory of Chosen"
+ KOR_Zaibatsu_jc_DEF:0 "Corporate Territory of Chosen"
+ KOR_Zaibatsu_ni_ADJ:0 "Korean"
+ KOR_Zaibatsu_rc_ADJ:0 "Korean"
+ KOR_Zaibatsu_lb_ADJ:0 "Korean"
+ KOR_Zaibatsu_ss_ADJ:0 "Korean"
+ KOR_Zaibatsu_jc_ADJ:0 "Korean"
+ KOR_Zaibatsu_ds_ADJ:0 "Korean"
+ KOR_Zaibatsu_cn_ADJ:0 "Korean"
+ KOR_Zaibatsu_an_ADJ:0 "Korean"
