--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -7,11 +7,34 @@
  NI_VARIANT_01_desc:0 "§YNeo-Imperialism§! is less of a unified ideology and more a set of similar principles shared by different groups. While 19th Century Imperialism was born out of the mission to civilize and a need for resources, New Imperialism was born out of the cultural chaos of the Great War's aftermath.\n\nUnlike a conventional dictatorial system, Neo-Imperialism advocates for the grand expansion of the state to dominate their neighbors both culturally, economically and politically. The concept of cultural dominance is particularly prevalent, as Neo-Imperialists believe in the inherent superiority of their home culture, and often see other cultures as inferior. This often extends to the topic of race, with Neo-Imperialists advocating for obliteration of so-called savage cultures and identities. Though there are naturally variances, Neo-Imperialists are almost invariably violent expansionists with aims on their neighbors and the world at large."
  ni_drift:0 "Daily drift towards Neo Imperialism"
 
+ NI_VARIANT_02:0 "§YUltranationalism§!"
+ NI_VARIANT_02_desc:0 "§YUltranationalism§! is a form of extreme nationalism focusing on the importance of one state or racial group above all others. Unlike Neo-Imperialism, Ultranationalism is not couched in Victorian concepts of racial superiority. Instead, it focuses on a xenophobic distrust of other races, seeking to eliminate them alltogether rather than forcefully assimilate them. Many ultranationalists hold a mythologized view of their national history, drawing on ancient or even mythical origin stories to build an extremist mythology around their people."
+
+ NI_VARIANT_03:0 "§YNational Syndicalism§!"
+ NI_VARIANT_03_desc:0 "§YNational Syndicalism§! is a form of left-wing extreme nationalism intended to fuse the nationalist struggle and class struggle. Under National Syndicalism, Trade Unions are often a key aspect of the integral national struggle. It disregards concepts like democratization or reformism in favour of reactionary political policies combined with mildly progressive social policies. In many cases, the means of production are concentrated in the hands of the state, rather than the proletariat."
+
+ NI_VARIANT_04:0 "§YClerical Ultranationalism§!"
+ NI_VARIANT_04_desc:0 "§YClerical Ultranationalism§! is, as the name implies, a synthesis of religious dogma and ultranationalist reactionary doctrine. The church, or alternate religious equivalent, holds major value as an organ of the nationalist state. Dogma is a principle motivating factor in government decisions, but not the sole factor as typical nationalist ideology still holds considerable sway."
+
+ NI_VARIANT_05:0 "§YRevolutionary Nationalism§!"
+ NI_VARIANT_05_desc:0 "§YRevolutionary Nationalism§! is a combination of Revolutionary Republicanist ideas and ultranationalist doctrine. Birthed during the tumultous interwar years of the French Republic, Revolutionary Nationalism was first described by French thinker Georges Sorel. He argued for taking the revolutionary republicanist aspect of Jacobinism and combining it with a strong, militaristic reactionary state. In recent years, the ideology has been pushed by French Armandists, their titular idealogue being former Jacobin Inessa Armand. "
+
  ds:0 "Despotism"
  ds_noun:0 "Despotism"
  ds_desc:0 "Despotist State"
+
  DS_VARIANT_01:0 "§YDespotism§!"
  DS_VARIANT_01_desc:0 "§YDespotism§! is a blanket ideology often ascribed to dictatorships, absolute monarchies and other right-wing authoritarian states. Though they can very wildly in domestic and foreign policy, despotic regimes will always do everything in their power to crush domestic threats to their power.\n\nThese regimes are often extremely militaristic, focusing on a mixture of reactionary values and propaganda to encourage an almost fanatically loyal population, or, at the very least, a population unwilling to openly challenge their dictates."
+ 
+ DS_VARIANT_02:0 "§YAbsolutism§!"
+ DS_VARIANT_02_desc:0 "§YAbsolutism§! is an overarching ideology to describe nations where a hereditary monarch holds complete power over the entire government. While there may be individuals in an advisory role, an absolutist government will always centralize all power in the hands of the sovereign."
+
+ DS_VARIANT_03:0 "§YPan-African Nationalism§!"
+ DS_VARIANT_03_desc:0 "§YPan-African Nationalism§! is a subset of Pan-Africanist thought that focuses on the nationalist aspect of Pan-African theory. Pan-African Nationalists seek to forge a unified African state based on common identity between African peoples, superseding tribal rivalries. This ideology is more common amongst black nationalist circles such as Garveyites in Hispaniola."
+
+ DS_VARIANT_04:0 "§YPan-Arab Nationalism§!"
+ DS_VARIANT_04_desc:0 "§YPan-Arab Nationalism§! is a subset of Pan-Arabist thought emphasizing the nationalistic elements of the Arab unification movement. Pan-Arab Nationalists are not typically democratic, pushing for a united nationalist vanguard party with limited social reforms. They chiefly focus on industrialization and secularization of Arab society."
+
  ds_drift:0 "Daily drift towards Despotism"
 
  rc:0 "Reactionary"
@@ -19,6 +42,7 @@
  rc_desc:0 "Reactionary State"
  RC_VARIANT_01:0 "§YReactionary§!"
  RC_VARIANT_01_desc:0 "§YReactionaries§! are a distinct form of hyper-conservatives focused on pseudo-authoritarian far right doctrines. Though not always overtly authoritarian, reactionary political parties will attempt to acquire and maintain power through authoritarian means. The ideology group is not particularly unified, however, and there are significant variances between different reactionary factions.\n\nReactionary groups can vary from simply militaristic conservatives to religious fundamentalists and monarchist cliques, but they share the unifying ideal of rolling back reforms in favor of tradition and dogma. They desire a return to the old days of their nation, and are extremely hostile towards anything that might prevent their restoration of these traditions."
+
  RC_VARIANT_02:0 "Religious Fundamentalism"
  RC_VARIANT_02_desc:0 "§YReligious Fundamentalism§! is an ideology rooted in extreme devotion to clerical doctrine. Vehemently reactionary in regards to social change, religious fundamentalists court their supporters through a fanatical obsession with their particular sect. Fundamentalist states are often insular, but if goaded, will unleash their zealous population against enemies with a frenzied zeal that many ideologies simply cannot match."
  rc_drift:0 "Daily drift towards Reactionary"
@@ -55,12 +79,16 @@
  jc:0 "Jacobinism"
  jc_noun:0 "Jacobinism"
  jc_desc:0 "Revolutionary Republic"
+
  JC_VARIANT_01:0 "Jacobinism"
  JC_VARIANT_01_desc:0 "Jacobinism is a school of thought that originated in the French Reformation. Originally espoused by Robespierre, modern Jacobins argue for the abolition of all hierachy, not just monarchy. Their principle concern is the creation of a direct democacy, often alongside the creation of a revolutionary vanguard to protect said democracy. In reality, however, this often leads to a far-left authoritarian government. Though progressive socially, Jacobin states are often despotic and militaristic, seeking to spread their revolution abroad.\n\nJacobins foster their support in the poor and defenseless, seeking to galvanize them to overturn the many crowns that pepper the Earth, bringing revolution worldwide."
+
  JC_VARIANT_02:0 "§YBakuninist Collectivism§!"
  JC_VARIANT_02_desc:0 "§YBakuninist Collectivism§! was developed largely as a reaction to the rise of Jacobinism. Developed by Russian revolutionary Mikhail Bakunin, Collectivism rejected the idea of a revolutionary vanguard proposed my most Jacobin theorists. Instead, Bakunin proposed the idea of an nearly stateless society, operating via direct democracy. In the wake of the bloody postwar Jacobin revolutions, many disenchanted socialists embraced Bakuninist Collectivism and its' ideals of revolutionary democracy and worker's self management."
+
  JC_VARIANT_03:0 "§YRevolutionary Imperialism§!"
  JC_VARIANT_03_desc:0 "§YRevolutionary Imperialism§! is a radical, militant offshoot of Jacobinism arguing for the continued spread of the people's revolution. Revoultionary Imperialists seek to expand into surrounding nations and beyond, creating sister republics dedicated to their liberators' revolutionary ideals. Even among other Jacobins, Revolutionary Imperialists are seen as dangerous radicals, not just for their militancy but their tendency to gain traction within revolutionary militaries."
+
  JC_VARIANT_04:0 "§YNational Jacobinism§!"
  JC_VARIANT_04_desc:0 "§YNational Jacobinism§! is the term given to the rightist branch of Jacobin thought. Originating out of Germany, National Jacobinism grew as a rejection of French Classical Jacobinism, which was a distinctly liberal ideology. National Jacobins, instead, appeal to the militaristic and more socially conservative members of society. While still arguing for revolutionary republicanism, National Jacobins are against social reformism and believe in the importance of maintaining societal norms. In this way, National Jacobins are socially reactionary but economically collectivist. In many ways, the militant conservative nature of National Jacobins is more comparable to Neo Imperialist thought than Classical or even Reformist Jacobinist thought."
  jc_drift:0 "Daily drift towards Jacobinism"
