--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1326,22 +1326,22 @@
  SHX_cn_ADJ:0 "Chinese"
  SHX_an_ADJ:0 "Chinese"
 
- CHI_ni:0 "Imperial China"
- CHI_ni_DEF:0 "Imperial China"
- CHI_ds:0 "Imperial China"
- CHI_ds_DEF:0 "Imperial China"
- CHI_rc:0 "Imperial China"
- CHI_rc_DEF:0 "Imperial China"
- CHI_an:0 "Imperial China"
- CHI_an_DEF:0 "Imperial China"
- CHI_cn:0 "Imperial China"
- CHI_cn_DEF:0 "Imperial China"
- CHI_lb:0 "Imperial China"
- CHI_lb_DEF:0 "Imperial China"
- CHI_ss:0 "Imperial China"
- CHI_ss_DEF:0 "Imperial China"
- CHI_jc:0 "Imperial China"
- CHI_jc_DEF:0 "Imperial China"
+ CHI_ni:0 "Empire of Great Qing"
+ CHI_ni_DEF:0 "Empire of Great Qing"
+ CHI_ds:0 "Empire of Great Qing"
+ CHI_ds_DEF:0 "Empire of Great Qing"
+ CHI_rc:0 "Empire of Great Qing"
+ CHI_rc_DEF:0 "Empire of Great Qing"
+ CHI_an:0 "Empire of Great Qing"
+ CHI_an_DEF:0 "Empire of Great Qing"
+ CHI_cn:0 "Empire of Great Qing"
+ CHI_cn_DEF:0 "Empire of Great Qing"
+ CHI_lb:0 "Empire of Great Qing"
+ CHI_lb_DEF:0 "Empire of Great Qing"
+ CHI_ss:0 "Empire of Great Qing"
+ CHI_ss_DEF:0 "Empire of Great Qing"
+ CHI_jc:0 "Empire of Great Qing"
+ CHI_jc_DEF:0 "Empire of Great Qing"
  CHI_ni_ADJ:0 "Chinese"
  CHI_rc_ADJ:0 "Chinese"
  CHI_lb_ADJ:0 "Chinese"
@@ -1515,8 +1515,8 @@
  KOR_lb_DEF:0 "Joseon Kingdom"
  KOR_ss:0 "Joseon Kingdom"
  KOR_ss_DEF:0 "Joseon Kingdom"
- KOR_jc:0 "Joseon Kingdom"
- KOR_jc_DEF:0 "Joseon Kingdom"
+ KOR_jc:0 "Federated Communes of Korea"
+ KOR_jc_DEF:0 "Federated Communes of Korea"
  KOR_ni_ADJ:0 "Korean"
  KOR_rc_ADJ:0 "Korean"
  KOR_lb_ADJ:0 "Korean"
