--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -49,7 +49,7 @@
   French.8.b:0 "The orders are delivered as expected"
 
   French.9.t:0 "Duck confit, with a dash of Violence"
-  French.9.d:0 "As night falls over Paris, members of Charles Muarras' Action Française party assemble for their annual party meeting in a Paris dining hall. Though there have been fears of potential violence at the hands of the pro-Doriot militias, little has seemingly happened over the past weeks to change Muarras' plans. The focus of this evening's meeting is the prospect of aligning with the Armandist faction of the FPF in order to unseat Doriot. Though Armand holds little love for the former monarchy, Muarras has promised reforms and concessions to the left-nationalists in exchange for their support.\n\nA final concern before the meeting begins is the issue of security. Given the incessant mood of paranoia that has fallen over Paris, it seems only natural to provide some degree of security to the attendees. Alternatively, as a means to strengthen the alliance with the left-nationals, they could be armed to provide security for the event."
+  French.9.d:0 "As night falls over Paris, members of Charles Maurras' Action Française party assemble for their annual party meeting in a Paris dining hall. Though there have been fears of potential violence at the hands of the pro-Doriot militias, little has seemingly happened over the past weeks to change Maurras' plans. The focus of this evening's meeting is the prospect of aligning with the Armandist faction of the FPF in order to unseat Doriot. Though Armand holds little love for the former monarchy, Maurras has promised reforms and concessions to the left-nationalists in exchange for their support.\n\nA final concern before the meeting begins is the issue of security. Given the incessant mood of paranoia that has fallen over Paris, it seems only natural to provide some degree of security to the attendees. Alternatively, as a means to strengthen the alliance with the left-nationals, they could be armed to provide security for the event."
   French.9.a:0 "Rely on the local authorities during the Dinner"
   French.9.b:0 "Secretly funnel arms to the monarchists"
   French.9.c:0 "Offer arms to the left-nationalists"
@@ -62,7 +62,7 @@
   French.11.d:0 ""
   French.11.a:0 "This is a betrayal of the triumvirate!"
 
-  French.12.t:0 "The Armandists turn on Muarras"
+  French.12.t:0 "The Armandists turn on Maurras"
   French.12.d:0 ""
   French.12.a:0 "A new dawn is at hand..."
 
@@ -86,6 +86,10 @@
   French.17.d:0 "As the Cultural Reconstruction reaches a fever pitch, the Grand Marshal has made his last edict on the matter, detailing his manifesto for the future of France. His plan is ambitious to say the least, and equally disquieting for those he has declared his regime against. A series of laws are to be implemented officially banning anyone of German heritage from public office or business ownership. Laws against France's not insignifcant Jewish population have been enacted, with the Doriot regime declaring them as \"racial fifth columnists\" to the French people.\n\nCoupled with these new racial laws is a \"generation plan\" proposed by the regime intended to dramatically increase France's birth rate over the course of the next decade. The Generation Plan is intended to create an \"ethnically pure\" France with a population to outgrow Europe's German diaspora.\n\nAlready, thousands of German, Jewish, and other minority groups have begun a mass exodus from France. Across the nation, German border communities and synagogues burn as the SP begins to enact the Grand Marshal's will."
   French.17.a:0 "Tomorrow belongs to us."
 
+  French.18.t:0 "The Cultural Reconstruction - Edict on the Church"
+  French.18.d:0 "Yet another victim of the Cultural Reconstruction has been France's majority religion, Catholicism. While the Doriotist faction of the FPF had previously maintained neutrality on religious affairs, this was a compromise of convenience rather than ideology. Citing the pro-Catholic policies of the now purged Maurras faction, the FPF has set off a wave of violence throughout France against the Catholic Church in France in an effort to violently secularize the country\n\nSpeaking over the radio on the issue, the Grand Marshal declared \"the authority of the clergy, entrenched by the weak monarchy, is a danger to the moral fortitude of the new French people.\" This phase of the Reconstruction has proven the most divisive to the French people, a plurality of which are Catholic or at least Christian. Significant resistance has come from the countryside and many townships are under assault by the SP for their refusal to accept the new forced secularization. In the place of religion, the Doriot regime has begun to push a new doctrine of \"National Worship\", effectively attempting to craft their own new religion out of reverence for the state and the French people. Condemnations have naturally been issued by both Naples and Frankfurt, with both governments offering to open their borders to religious refugees."
+  French.18.a:0 "The Church shall be swept away, as with all things against the New State."
+
   ##########################
   # IDEAS
   ##########################
@@ -108,6 +112,9 @@
   PB_FRA_New_Feminism:0 "New Feminism"
   PB_FRA_New_French_State:0 "The New France"
   PB_FRA_Cultural_Reconstruction:0 "Reconstruction Culturelle"
+  PB_FRA_Left_Nationalist_Doctrine:0 "Left-Nationalist Doctrine"
+  PB_FRA_lol_fucking_conscript_everyone:0 "Indiscriminate Conscription"
+  PB_FRA_Female_Emancipation:0 "Emancipation by Fire"
 
   ##########################
   # FOCUS
@@ -115,7 +122,7 @@
   PB_FRA_Purge:0 "An Evening in Paris"
   PB_FRA_Purge_Aftermath:0 "The Morning After"
 
-  PB_FRA_Muarras_Takeover:0 "Muarras Survives the Night"
+  PB_FRA_Maurras_Takeover:0 "Maurras Survives the Night"
   PB_FRA_Bourbon_Restoration:0 "The Bourbon Restoration"
   PB_FRA_Restore_Noble_Titles:0 "Reinstate the Noble Titles"
   PB_FRA_Light_of_the_Sovereign:0 "Guiding Light of the Sovereign"
@@ -134,6 +141,13 @@
   PB_FRA_A_New_France_Rises:0 "A New France from the Ashes"
 
   PB_FRA_Armand_Takeover:0 "Armand's Power Grab"
+  PB_FRA_Armandist_Constitution:0 "The Armandist Constitution"
+  PB_FRA_Left_Nationalism:0 "Nationalism without Capitalism"
+  PB_FRA_Socialism_without_Internationalism:0 "Socialism without Internationalism"
+  PB_FRA_French_Path:0 "A New French Synthesis"
+  PB_FRA_Indiscriminate_Conscription:0 "All Will Have the Chance to Die for France"
+  PB_FRA_Joan_of_Arc_Legacy:0 "Legacy of Jeanne d'Arc"
+  PB_FRA_Ideological_Fanatacism:0 "Ideological Fanatacism"
 
 
   ##########################
@@ -278,22 +292,22 @@ PB_MGE_Peace_1_desc:0 "With the final negotiations set, the peace is finalized. 
  FRA_Monarchy_cn_ADJ:0 "French"
  FRA_Monarchy_an_ADJ:0 "French"
 
- FRA_Armand_ni:0 "People's State of France"
- FRA_Armand_ni_DEF:0 "People's State of France"
- FRA_Armand_ds:0 "People's State of France"
- FRA_Armand_ds_DEF:0 "People's State of France"
- FRA_Armand_rc:0 "People's State of France"
- FRA_Armand_rc_DEF:0 "People's State of France"
- FRA_Armand_an:0 "People's State of France"
- FRA_Armand_an_DEF:0 "People's State of France"
- FRA_Armand_cn:0 "People's State of France"
- FRA_Armand_cn_DEF:0 "People's State of France"
- FRA_Armand_lb:0 "People's State of France"
- FRA_Armand_lb_DEF:0 "People's State of France"
- FRA_Armand_ss:0 "People's State of France"
- FRA_Armand_ss_DEF:0 "People's State of France"
- FRA_Armand_jc:0 "People's State of France"
- FRA_Armand_jc_DEF:0 "People's State of France"
+ FRA_Armand_ni:0 "People's Territory of France"
+ FRA_Armand_ni_DEF:0 "People's Territory of France"
+ FRA_Armand_ds:0 "People's Territory of France"
+ FRA_Armand_ds_DEF:0 "People's Territory of France"
+ FRA_Armand_rc:0 "People's Territory of France"
+ FRA_Armand_rc_DEF:0 "People's Territory of France"
+ FRA_Armand_an:0 "People's Territory of France"
+ FRA_Armand_an_DEF:0 "People's Territory of France"
+ FRA_Armand_cn:0 "People's Territory of France"
+ FRA_Armand_cn_DEF:0 "People's Territory of France"
+ FRA_Armand_lb:0 "People's Territory of France"
+ FRA_Armand_lb_DEF:0 "People's Territory of France"
+ FRA_Armand_ss:0 "People's Territory of France"
+ FRA_Armand_ss_DEF:0 "People's Territory of France"
+ FRA_Armand_jc:0 "People's Territory of France"
+ FRA_Armand_jc_DEF:0 "People's Territory of France"
  FRA_Armand_ni_ADJ:0 "French"
  FRA_Armand_rc_ADJ:0 "French"
  FRA_Armand_lb_ADJ:0 "French"
