--- a/localisation/PB_factions_l_english.yml
+++ b/localisation/PB_factions_l_english.yml
@@ -9,7 +9,7 @@
  #################
   CPS:0 "Revolutionary Front"
   COM:0 "Commonwealth of Nations"
-  REV:0 "Revanchist Pacte"
+  REV:0 "Pacte Revanchiste"
   BER:0 "Imperial Powers"
   UAE:0 "United Arab Emirates"
   NOR:0 "Northern Defense Committee"
