--- a/localisation/PB_China_l_english.yml
+++ b/localisation/PB_China_l_english.yml
@@ -250,6 +250,9 @@
   CHI_Infrastructure_Program:0 "Infrastructure Program"
   CHI_Firebombing_Raids:0 "Firebombing Doctrine"
   CHI_Civil_War_Aftermath:0 "Recovering from the Chinese Civil War"
+  CHI_Mass_Famine:0 "Postwar Famine"
+  CHI_Mass_Famine_Reduced:0 "Postwar Famine Controlled"
+  CHI_Republican_Insurgency:0 "Republican Insurgency"
 
   ##########################
   # DECISIONS
@@ -377,6 +380,27 @@
   qing.26.t:0 "The Qing Expell Our Advisors"
   qing.26.d:0 ""
   qing.26.a:0 "Unfortunate."
+
+  qing.27.t:0 "The End of the Revolution"
+  qing.27.d:0 ""
+  qing.27.a:0 "The Empire is secure, for now."
+
+  qing.28.t:0 "Outbreak of Famine"
+  qing.28.d:0 ""
+  qing.28.a:0 "We must get this under control"
+
+  qing.29.t:0 "The Republican Insurgency"
+  qing.29.d:0 ""
+  qing.29.a:0 "We will crush these bandits!"
+
+  qing.30.t:0 "Attacks by the Republican Insurgency!"
+  qing.30.d:0 ""
+  qing.30.a:0 "This is terrible!"
+
+  qing.31.t:0 "The Trial of the Republican Generals"
+  qing.31.d:0 ""
+  qing.31.a:0 "Have all of them executed!"
+  qing.31.b:0 "Pardon the least dangerous offenders"
 
   ##########################
   # TOOLTIPS
