THE FIRST TEJAS PUSH!!!!
fffff

--- a/localisation/PB_Parties_l_english.yml
+++ b/localisation/PB_Parties_l_english.yml
@@ -68,11 +68,17 @@ COL_cn_party:0 "PCC"
   ##########################
 
 TEX_lb_party_long:0 "Partido Demócrata Texano"
-TEX_lb_party:0 "PDT"
-TEX_an_party_long:0 "Texas Fuel Company"
-TEX_an_party:0 "TFC"
-TEX_rc_party_long:0 "Unión Anglo Protestante/Protestant Anglo Union"
-TEX_rc_party:0 "UAP/PAU"
+TEX_lb_party:0 "Partido Demócrata"
+TEX_ss_party_long:0 "Socialist Union Party"
+TEX_ss_party:0 "Socialist Union Party"
+TEX_cn_party_long:0 "Coalición Nacional Texana"
+TEX_cn_party:0 "Coalición Nacional"
+TEX_an_party_long:0 "Texas Republican Party"
+TEX_an_party:0 "Texas Republican Party"
+TEX_rc_party_long:0 "Know Nothing Party"
+TEX_rc_party:0 "Know Nothings"
+TEX_ds_party_long:0 "Junta Militar"
+TEX_ds_party:0 "Junta Militar"
 
   ##########################
   # ETHIOPIA
