Tons and tons of Texas stuff

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1705,8 +1705,8 @@
  TEX_ni_DEF:0 "Republic of Tejas"
  TEX_ds:0 "Republic of Tejas"
  TEX_ds_DEF:0 "Republic of Tejas"
- TEX_rc:0 "Republic of Tejas"
- TEX_rc_DEF:0 "Republic of Tejas"
+ TEX_rc:0 "Republic of Texas"
+ TEX_rc_DEF:0 "Republic of Texas"
  TEX_an:0 "Republic of Tejas"
  TEX_an_DEF:0 "Republic of Tejas"
  TEX_cn:0 "Republic of Tejas"
