Tejas 2 - Starring Houston and the Caudillo

--- a/localisation/PB_Tejas_l_english.yml
+++ b/localisation/PB_Tejas_l_english.yml
@@ -17,6 +17,10 @@
 PB_TEX_the_settler_conflict:0 "Tejano-Anglo Tensions"
 PB_TEX_the_settler_conflict_desc:0 "The settler conflict has been eating away at our nation for years, and the collapse of the Mexican Empire has only made it worse. Widespread economic collapse in the American Commonwealth has led to a massive immigration wave from Anglos in the East, while Mexicans in the south flee to our stable democracy. Enclaves divided among racial lines have only become more common with our increasing political polarization."
 PB_TEX_anarchy:0 "Brawling On The Streets"
+PB_TEX_anarchy2:0 "Recovery From The Crisis"
+PB_TEX_anarchy3:0 "Recovery From The Crisis"
+PB_TEX_Prohibition:0 "Prohibition"
+PB_TEX_Frontier_Spirit:0 "Good Ol' Texan Spirit"
 ####################
 # FOCI
 #####################
@@ -58,8 +62,14 @@ TEX_Support_The_Ranchers:0 "Subsidize The Ranchers"
 TEX_Support_The_Ranchers_desc:0 ""
 TEX_Prohibition:0 "The Prohibition Platform"
 TEX_Prohibition_desc:0 ""
-TEX_Supress_The_Catholics:0 "Supress Catholic Interests"
+TEX_Supress_The_Catholics:0 "The Beastly Catholics"
 TEX_Supress_The_Catholics_desc:0 ""
+TEX_Reorganize_Parliament:0 "Justice In The Legislature"
+TEX_Reorganize_Parliament_desc:0 ""
+TEX_Legacy_Of_The_Alamo:0 "Come And Take It!"
+TEX_Legacy_Of_The_Alamo_desc:0 ""
+TEX_The_Military_Dictatorship:0 "The Caudillo In Control"
+TEX_The_Military_Dictatorship_desc:0 ""
 #######################
 # COUNTRY FLAGS
 ######################
