More Caudillo stuff!
a

--- a/localisation/PB_Tejas_l_english.yml
+++ b/localisation/PB_Tejas_l_english.yml
@@ -70,6 +70,20 @@ TEX_Legacy_Of_The_Alamo:0 "Come And Take It!"
 TEX_Legacy_Of_The_Alamo_desc:0 ""
 TEX_The_Military_Dictatorship:0 "The Caudillo In Control"
 TEX_The_Military_Dictatorship_desc:0 ""
+TEX_Pacify_The_Settlers:0 "Pacify The Settlers"
+TEX_Pacify_The_Settlers_desc:0 ""
+TEX_Power_To_The_Military:0 "Power To The Military"
+TEX_Power_To_The_Military_desc:0 ""
+TEX_Legacy_Of_Santa_Anna:0 "Legacy Of Santa Anna"
+TEX_Legacy_Of_Santa_Anna_desc:0 ""
+TEX_Ban_Reactionaries:0 "Ban The Know Nothings"
+TEX_Ban_Reactionaries_desc:0 ""
+TEX_The_Folk_Caudillo:0 "The People's Caudillo"
+TEX_The_Folk_Caudillo_desc:0 ""
+TEX_Replace_The_Corrupt_Elites:0 "Replace The Corrupt"
+TEX_Replace_The_Corrupt_Elites_desc:0 ""
+TEX_Reward_The_Loyal:0 "Reward The Loyal"
+TEX_Reward_The_Loyal_desc:0 ""
 #######################
 # COUNTRY FLAGS
 ######################
