--- a/localisation/PB_Tejas_l_english.yml
+++ b/localisation/PB_Tejas_l_english.yml
@@ -21,6 +21,7 @@ PB_TEX_anarchy2:0 "Recovery From The Crisis"
 PB_TEX_anarchy3:0 "Recovery From The Crisis"
 PB_TEX_Prohibition:0 "Prohibition"
 PB_TEX_Frontier_Spirit:0 "Good Ol' Texan Spirit"
+PB_TEX_welfare_for_loyal:0 "The Tejano Safety Net"
 ####################
 # FOCI
 #####################
@@ -84,6 +85,12 @@ TEX_Replace_The_Corrupt_Elites:0 "Replace The Corrupt"
 TEX_Replace_The_Corrupt_Elites_desc:0 ""
 TEX_Reward_The_Loyal:0 "Reward The Loyal"
 TEX_Reward_The_Loyal_desc:0 ""
+TEX_Personalistic_Regime:0 "Personalistic Politics"
+TEX_Personalistic_Regime_desc:0 ""
+TEX_Forceful_Integration:0 "Forceful Integration"
+TEX_Forceful_Integration_desc:0 ""
+TEX_Seize_The_Businesses:0 "Stamp Out The Landowners"
+TEX_Seize_The_Businesses_desc:0 ""
 #######################
 # COUNTRY FLAGS
 ######################
