final caudillo edits while i go and do something else

--- a/localisation/PB_Tejas_l_english.yml
+++ b/localisation/PB_Tejas_l_english.yml
@@ -22,6 +22,8 @@ PB_TEX_anarchy3:0 "Recovery From The Crisis"
 PB_TEX_Prohibition:0 "Prohibition"
 PB_TEX_Frontier_Spirit:0 "Good Ol' Texan Spirit"
 PB_TEX_welfare_for_loyal:0 "The Tejano Safety Net"
+PB_TEX_seize_land:0 "Land Seizures"
+PB_TEX_principles_of_santa_anna:0 "A Proper Government For The Tejanos"
 ####################
 # FOCI
 #####################
@@ -91,6 +93,8 @@ TEX_Forceful_Integration:0 "Forceful Integration"
 TEX_Forceful_Integration_desc:0 ""
 TEX_Seize_The_Businesses:0 "Stamp Out The Landowners"
 TEX_Seize_The_Businesses_desc:0 ""
+TEX_Wise_And_Virtous:0 "Wise and Virtuous Despotism"
+TEX_Wise_And_Virtous_desc:0 ""
 #######################
 # COUNTRY FLAGS
 ######################
