Qing Empire Work
Added Peking Conference Event chain, beginnings of monarchist postwar tree

--- a/localisation/PB_China_l_english.yml
+++ b/localisation/PB_China_l_english.yml
@@ -103,6 +103,11 @@
   PB_CHI_Great_Leap_Forward:0 "Make a Great Leap Forwards"
   PB_CHI_A_Modern_China:0 "A New, Modern China"
 
+  PB_CHI_Peking_Conference:0 "Call the Peking Conference"
+  PB_CHI_Qing_Constitutionalism:0 "A Liberal Empire"
+  PB_CHI_Qing_Constitutionalism_CN:0 "A Conservative Empire"
+  PB_CHI_Qing_Absolutism_Retained:0 "An Absolutist Empire"
+
   ##########################
   # IDEAS
   ##########################
@@ -152,6 +157,7 @@
   CHI_Court_Reformists:0 "Reformists in the Court"
   CHI_Autonomous_Peasant_Communes:0 "Peasant Communes"
   CHI_Breakneck_Industrialization:0 "Breakneck Industrialization"
+  CHI_Political_Concessions_Military:0 "Political Concessions to the Military"
 
   ##########################
   # REPUBLICAN CHINA FOCUSES
@@ -292,6 +298,7 @@
 
   PB_CHI_Regions_Insurgents_Pacified:0 "All Insurgent Provinces have been §YPacified§!"
 
+  PB_CHI_Revolution_Defeated_tooltip:0 "§YThe Chinese Revolution has been defeated§!"
 
   ##########################
   # DECISIONS
@@ -451,9 +458,47 @@
   qing.31.d:0 ""
   qing.31.a:0 "This is terrible!"
 
+  qing.32.t:0 "The Peking Conference - Proposal for Parliament"
+  qing.32.d:0 ""
+  qing.32.a:0 "Allow for the formation of an independent parliament."
+  qing.32.b:0 "Form a parliament, but only allow land owners to vote."
+  qing.32.c:0 "China need not democracy, need not throwing banana."
+
+  qing.33.t:0 "The Peking Conference - Status of Foreign Concessions"
+  qing.33.d:0 ""
+  qing.33.a:0 "Nationalize the Concessions, China for the Chinese!"
+  qing.33.b:0 "Compromise with the Foreigners"
+  qing.33.c:0 "China welcomes the business!"
+
+  qing.34.t:0 "The Peking Conference - Constitutional Convention"
+  qing.34.d:0 ""
+  qing.34.a:0 "Focus on Separation of Powers and individual rights."
+  qing.34.b:0 "Focus on entrenching the current power base."
+  qing.34.c:0 "Focus on empowering the Manchu aristocracy"
+
+  qing.35.t:0 "A Liberal Constitution"
+  qing.35.d:0 ""
+  qing.35.a:0 "Change is coming to China!"
+
+  qing.36.t:0 "A Conservative Constitution"
+  qing.36.d:0 ""
+  qing.36.a:0 "The Old Order shall remain!"
+
+  qing.37.t:0 "An Absolutist Constitution"
+  qing.37.d:0 ""
+  qing.37.a:0 "The Emperor shall reign supreme!"
+
+  qing.38.t:0 "The Military Demands Political Concessions"
+  qing.38.d:0 ""
+  qing.38.a:0 "Absolutely not."
+  qing.38.b:0 "Whatever keeps them happy."
+
   ##########################
   # TOOLTIPS
   ##########################
   QING_Tag_Switch_Tooltip:0 "§YYou will remain as the Qing Empire§!"
   NRA_Tag_Switch_Tooltip:0 "§YYou will swtich to the National Revolutionary Alliance§!"
   PB_CHI_Wuchang_Bombing_tooltip:0 "§YThe Wuchang Bombing has occurred§!"
+  QING_Military_Agitation_Increase:0 "§YThe Militarists will not approve of this change.§!\n"
+  QING_Boxer_Agitation_Increase:0 "§YThe Yihetuan will not approve of this change.§!\n"
+  QING_Government_Liberalization_Increase:0 "§YThis will increase our government's liberalization§!\n"
