--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -20,6 +20,14 @@
   PBNews.5.d:0 "The London Stock Crisis has utterly decimated the British sphere of influence, and has left many of their longtime allies facing mass unrest at home. Few other nations experienced this as acutely as Egypt, and just this morning, that unrest exploded into open revolt. A series of protests in Cairo rapidly broke down when Royal Egyptian troops were ordered to open fire. Instead, they turned their weapons on their commanders and soon, on the Royal Palace itself. With the King now in custody of the military, an uneasy provisional government has been formed between the militarists, clergy and reformists."
   PBNews.5.a:0 "The flag of freedom flies over Cairo today"
 
+  PBNews.6.t:0 "End of the Chinese Revolution"
+  PBNews.6.d:0 "The Chinese Civil War has come to an end. Republican forces have been routed and defeated after the fall of their provisional capital in Dali. The Imperial forces have achieved victory, but at an incredible cost. China has been decimated by the conflict, with millions of civilian casualties. Famine, disease and banditry run rampant as the Imperial authorities take stock of their phyrric victory.\n\nDespite this, it remains to be seen if the formerly moribund Qing Empire will be able to weather reconstruction intact."
+  PBNews.6.a:0 "Perhaps the Qing aren't doomed?"
+
+  PBNews.7.t:0 "Victory of the Chinese Revolution"
+  PBNews.7.d:0 "The Chinese Civil War has come to an end. Republican forces have soundly defeated the Qing Empire and successfully taken control of Beijing. The fall of the Manchu monarchy was predicted by many outside observers for nearly a decade since the end of the Great War. Even still, many are shocked to see the end of Imperial China.\n\nOne of the oldest and most ancient states in the world has been toppled by populist revolution, and the international community waits to see what will come of the new provisional government."
+  PBNews.7.a:0 "The Future of China is uncertain."
+
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
   stockcrisis.1.a:0 "Oh dear"
