--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -4619,6 +4619,56 @@ SAN_jc:0 "Sanghli State"
  COR_cn_ADJ:0 "Corsican"
  COR_an_ADJ:0 "Corsican"
 
+ FTR_ni:0 "Free Territory of Hui"
+ FTR_ni_DEF:0 "Free Territory of Hui"
+ FTR_ds:0 "Free Territory of Hui"
+ FTR_ds_DEF:0 "Free Territory of Hui"
+ FTR_rc:0 "Free Territory of Hui"
+ FTR_rc_DEF:0 "Free Territory of Hui"
+ FTR_an:0 "Free Territory of Hui"
+ FTR_an_DEF:0 "Free Territory of Hui"
+ FTR_cn:0 "Free Territory of Hui"
+ FTR_cn_DEF:0 "Free Territory of Hui"
+ FTR_lb:0 "Free Territory of Hui"
+ FTR_lb_DEF:0 "Free Territory of Hui"
+ FTR_ss:0 "Free Territory of Hui"
+ FTR_ss_DEF:0 "Free Territory of Hui"
+ FTR_jc:0 "Free Territory of Hui"
+ FTR_jc_DEF:0 "Free Territory of Hui"
+ FTR_ni_ADJ:0 "Hui"
+ FTR_rc_ADJ:0 "Hui"
+ FTR_lb_ADJ:0 "Hui"
+ FTR_ss_ADJ:0 "Hui"
+ FTR_jc_ADJ:0 "Hui"
+ FTR_ds_ADJ:0 "Hui"
+ FTR_cn_ADJ:0 "Hui"
+ FTR_an_ADJ:0 "Hui"
+
+ SGH_ni:0 "Shanghai Republic"
+ SGH_ni_DEF:0 "Shanghai Republic"
+ SGH_ds:0 "Shanghai Republic"
+ SGH_ds_DEF:0 "Shanghai Republic"
+ SGH_rc:0 "Shanghai Republic"
+ SGH_rc_DEF:0 "Shanghai Republic"
+ SGH_an:0 "Shanghai Republic"
+ SGH_an_DEF:0 "Shanghai Republic"
+ SGH_cn:0 "Shanghai Republic"
+ SGH_cn_DEF:0 "Shanghai Republic"
+ SGH_lb:0 "Shanghai Republic"
+ SGH_lb_DEF:0 "Shanghai Republic"
+ SGH_ss:0 "Shanghai Commune"
+ SGH_ss_DEF:0 "Shanghai Commune"
+ SGH_jc:0 "Shanghai Commune"
+ SGH_jc_DEF:0 "Shanghai Commune"
+ SGH_ni_ADJ:0 "Shanghai-Chinese"
+ SGH_rc_ADJ:0 "Shanghai-Chinese"
+ SGH_lb_ADJ:0 "Shanghai-Chinese"
+ SGH_ss_ADJ:0 "Shanghai-Chinese"
+ SGH_jc_ADJ:0 "Shanghai-Chinese"
+ SGH_ds_ADJ:0 "Shanghai-Chinese"
+ SGH_cn_ADJ:0 "Shanghai-Chinese"
+ SGH_an_ADJ:0 "Shanghai-Chinese"
+
 ###################################
 # TEMPLATE
 ###################################
